--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   shared_preferences: ^2.0.5
   flutter:
     sdk: flutter
-
+  feedback: 2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,6 +33,7 @@ dependencies:
   path_provider: ^0.4.1
   sqflite: any
   image_picker: ^0.7.4
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
