--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,12 @@ environment:
 
 dependencies:
   http: ^0.13.1
+  persistent_bottom_nav_bar: any
   shared_preferences: ^2.0.5
   flutter:
     sdk: flutter
   feedback: 2.0.0
-
+  contactus: ^1.1.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
