--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   sqflite: any
   image_picker: ^0.7.4
   flutter_rating_bar: ^4.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
