--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   path_provider: ^0.4.1
   image_picker: ^0.7.4
   flutter_rating_bar: ^4.0.0
-
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
