--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ flutter:
     - img/meal2.png
     - img/meal3.png
     - img/meal9.png
+    - img/z.jpg
+    - img/y.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
